feat: 实现阶段一功能1-4（实时数据源+扩展球员模型+比赛详情页+球员详情页）
功能1: 接入NBA官方实时数据源
- 重写 nba_data_fetcher.py 使用 nba_api 库替代 ESPN
- 新增 SchedulerConfig + NbaLiveSyncService 定时同步
- 支持今日比赛实时比分同步（每5分钟）

功能2: 扩展球员数据模型（15+新字段）
- Player 实体新增：命中率、三分、罚球、盖帽、失误、效率值、真实命中率、使用率、球衣号码、身高、体重、国籍
- 前端表格/表单/Excel导出同步更新

功能3: 新增比赛详情页
- GameBoxScore/PlayByPlay 实体 + API
- MatchDetailView.vue（逐节比分、Box Score、Play-by-play时间线）
- NewsView/TeamDetailView 添加跳转链接

功能4: 新增球员详情页
- PlayerGameLog/PlayerCareerStats 实体 + API
- PlayerDetailView.vue（雷达图、生涯趋势图、比赛日志）
- PlayerListView 姓名可点击跳转

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>