@@ -9,7 +9,9 @@ import com.nbamanager.web.dto.DashboardStatsDto.TeamWinRow;
 import com.nbamanager.web.dto.DashboardStatsDto.TopScorerRow;
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -20,6 +22,7 @@ public class DashboardService {
     private final TeamRepository teamRepository;
     private final PlayerRepository playerRepository;
 
+    @Cacheable(value = "dashboard", key = "'stats'")
     @Transactional(readOnly = true)
     public DashboardStatsDto buildStats() {
         List<Team> teams = teamRepository.findAll();
@@ -29,14 +32,14 @@ public class DashboardService {
                 teams.stream()
                         .sorted(Comparator.comparing(Team::getWins).reversed())
                         .map(t -> new TeamWinRow(t.getName(), t.getWins(), t.getLosses()))
-                        .toList();
+                        .collect(Collectors.toList());
 
         List<TopScorerRow> top =
                 players.stream()
                         .sorted(Comparator.comparing(Player::getPointsPerGame).reversed())
                         .limit(8)
                         .map(p -> new TopScorerRow(p.getName(), p.getPointsPerGame(), p.getTeam().getName()))
-                        .toList();
+                        .collect(Collectors.toList());
 
         return new DashboardStatsDto(teamRows, top);
     }
